A renderer to rule them all